@@ -2,7 +2,7 @@
 # TODO - todo list of OTRS
 # Copyright (C) 2001-2002 Martin Edenhofer <martin+todo@otrs.org>
 # --
-# $Id: TODO,v 1.38 2003-03-10 21:25:52 martin Exp $
+# $Id: TODO,v 1.39 2003-03-13 15:30:00 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
@@ -10,7 +10,6 @@
 # --
 
 1.1
-- improve create customer account (martin)
 - bin/PostMasterPOP3.pl + procmail/filter (martin)
 - Add Page Navigator for AgentQueueView -
    http://lists.otrs.org/pipermail/otrs/2003-February/000881.html (martin)
@@ -21,6 +20,7 @@
    http://lists.otrs.org/pipermail/otrs/2002-June/000066.html (martin)
 - interfaceing with bugzilla (martin)
 - internationalization of agent notification messages (martin)
+- delete option for records (martin)
 
 2.0
 - user backend (LDAP and DB)
